Changelog for skalibs.

In 2.10.0.0
-----------

 - New openc_* functions.
 - New function: ipc_bind_reuse_lock(), taking a lock before
unconditionally deleting the socket.
 - ipc_bind_reuse() rewritten to use ipc_bind_reuse_lock(),
so it does the right thing instead of clobbering sockets.
 - Complete revamping of the pathexec functions, see exec.h.
 - Revamping of the locking functions.


In 2.9.3.0
----------

 - New stralloc_readyplus_tuned() function.
 - Bugfixes.


In 2.9.2.1
----------

 - Bugfixes.


In 2.9.2.0
----------

 - Bugfixes.
 - New bigkv_* set of functions in libdatastruct.


In 2.9.1.0
----------

 - Bugfixes.
 - Better support for GNU Hurd.
 - Added path_canonicalize().


In 2.9.0.0
----------

 - Bugfixes.
 - Better support of out-of-path toolchains (among other things,
that means better autotools emulation).
 - Build more friendly to recent glibc.
 - Refactoring and optimization of scanning and formatting functions.
 - Refactoring of stopwatch/wallclock functions. The --enable-clock
and --enable-monotonic configure switches have been removed.
tain_now() can now be set at run time to use a wall clock (default,
or via tain_now_set_wallclock()) or a stopwatch (via
tain_now_set_stopwatch()), instead of it being fixed at build time.
 - Easy cross-compilation: no need to provide a whole sysdeps
directory anymore. Only a few sysdeps have to be provided manually,
via a --with-sysdep-K=V option to configure. Currently, that means
one: --with-sysdep-devurandom=yes|no


In 2.8.1.0
----------

 - Added skalibs_regcomp(), accepting empty regexes on BSDs.


In 2.8.0.1
----------

 - Bugfixes.
 - Better reporting in utc_from_tai() and localtm_from_*()


In 2.8.0.0
----------

 - Bugfixes.
 - avltreeb removed. (It used VLAs inside of structures, which is
GNU C, not C99.) The AVLTREEN_DECLARE_AND_INIT() macro should be
used instead.
 - New functions: env_dump(), mk?temp(), autosurf(), autosurf_name()