@@ -3,9 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>skalibs: the webipc header</title>
-    <meta name="Description" content="skalibs: the webipc header" />
-    <meta name="Keywords" content="skalibs header webipc socket unix domain network local" />
+    <title>skalibs: the exec header</title>
+    <meta name="Description" content="skalibs: the exec header" />
+    <meta name="Keywords" content="skalibs header exec environment char** execve" />
     <!-- <link rel="stylesheet" type="text/css" href="//skarnet.org/default.css" /> -->
   </head>
 <body>
@@ -18,7 +18,7 @@
 <a href="//skarnet.org/">skarnet.org</a>
 </p>
 
-<h1> The <tt>skalibs/webipc.h</tt> header </h1>
+<h1> The <tt>skalibs/exec.h</tt> header </h1>
 
 <p>
  TODO: write this documentation page. (Sorry!)
